--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,15 +1,25 @@
-*{
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  body{
-    font-family: "Arial" sans-serif;
-  }
-  .container{
-    max-width: 1320px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Mulish:wght@200;300;400;500;600;700;800&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-family: 'Raleway', sans-serif;
+  // background-image: url('../img/main__bg.png');
+  // background-repeat: no-repeat;
+  // background-size: 900px;
+  // left: 0;
+  // bottom: 0;
+}
+
+.container {
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
+}
