--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -1,23 +1,40 @@
-html,
-body {
-  position: relative;
-  height: 100%;
-}
 
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
-  margin: 0;
-  padding: 0;
+.main__slider{
+    width: 800px;
+    .swiper-button-next, .swiper-button-prev {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #047BEF !important;
+      color: white !important;
+     &::after{
+      font-size: 33px;
+     }
+    }
+    .swiper-button-next {
+      
+     &::after{
+      margin-left: 7px;
+     }
+    }
+    .swiper-button-prev {
+      left: -10px;
+      &::after{
+       margin-right: 5px;
+      }
+     }
 }
-
 .swiper {
+  overflow-y: hidden !important;
   width: 100%;
   height: 100%;
+  padding: 0 50px;
 }
 
+.swiper-slide-next{
+  width: 250px !important;
+  transform: scale(1.1) translateY(-200px) !important ;
+}
 .swiper-slide {
   text-align: center;
   font-size: 18px;
