--- a/scss/block/_main.scss
+++ b/scss/block/_main.scss
@@ -1,6 +1,16 @@
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-image: url('../../img/main__bg.png');
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: contain;
+}
 .main__inner{
     margin-top: 59px;
     display: flex;
+    align-items: end;
 
 }
 .main__info{
