--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -1,10 +1,19 @@
 
 .main__slider{
-  background-color: red;
-  display: flex;
-  align-items: end;
+  
   height: 600px;
   width: 800px;
+  .mySwiper{
+    display: flex !important;
+    align-items: end !important;
+    position: relative;
+  }
+  .swiper{
+    display: flex !important;
+    align-items: end !important;
+  }
+  
+  
     .swiper-button-next, .swiper-button-prev {
       width: 50px;
       height: 50px;
@@ -37,8 +46,8 @@
 }
 
 .swiper-wrapper{
-  display: flex;
-  align-items: end;
+  display: flex !important;
+  align-items: end !important;
 }
 
 
@@ -53,7 +62,7 @@
 .swiper-slide-next{
   z-index: 3;
   width: 250px !important;
-  transform: scale(1.1)  !important ;
+  transform: scale(1.1)  translateY(-75px)  !important ;
   img{
     height: 100%;
   }
@@ -75,6 +84,7 @@
   display: block;
   width: 100%;
   height: 80%;
+  object-fit: contain;
 }
 
 .swiper-pagination{
@@ -97,5 +107,6 @@
   border-radius: 8px;
   padding: 11px;
   left: 55% !important;
-  transform: translate(-70px);
+  bottom: 90px !important;
+  transform: translate(-75px);
 }
