--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -56,3 +56,19 @@
         }
     }
 }
+
+@media (max-width: 500px) {
+   .lang__wrapper {
+    margin-top: 37px;
+    padding: 17px;
+    background: rgba(4, 123, 239, 0.07);
+    border-radius: 9px;
+    width: 100%;
+    .lang__wrapper__title{
+        display: none;
+    }
+    .lang__inner{
+        display: none;
+    }
+   }
+}
