--- a/scss/block/_select.scss
+++ b/scss/block/_select.scss
@@ -1,21 +1,22 @@
+
 .lang__select__wrapper{
-    display: flex;
-    align-items: start;
-
-
-    .my__none{
-        display: none;
-    }
-
-    .my__flex{
-        display: flex;
-    }
-}
-
-
-.lang__select__inner{
-
     display: none;
-    flex-direction: column;
 }
 
+@media (max-width: 500px) {
+    .lang__select__wrapper{
+        
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        select{
+            border: none;
+            background-color: transparent;
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 22px;
+            color: black;
+            outline: none;
+        }
+    }
+}
