--- a/scss/block/_main.scss
+++ b/scss/block/_main.scss
@@ -1,4 +1,4 @@
-body{
+body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -7,28 +7,36 @@ body{
     background-position: left bottom;
     background-size: contain;
 }
-.main__inner{
+@media (max-width: 600px) {
+    body{
+        background-image: url('../../img/main__bg2.png');
+        background-position:  left  center;
+        background-size: contain;
+    }
+}
+.main__inner {
     margin-top: 59px;
     display: flex;
     align-items: end;
 
 }
-.main__info{
-    
-}
-.main__title{
+
+.main__info {}
+
+.main__title {
     font-style: normal;
-font-weight: 600;
-font-size: 27px;
-line-height: 33px;
-letter-spacing: 0.025em;
-max-width: 538px;
+    font-weight: 600;
+    font-size: 27px;
+    line-height: 33px;
+    letter-spacing: 0.025em;
+    max-width: 538px;
 }
 
-.main__list{
+.main__list {
     margin-top: 23px;
 }
-.main__item{
+
+.main__item {
     margin-left: 16px;
     margin-bottom: 16px;
     font-style: normal;
@@ -37,23 +45,50 @@ max-width: 538px;
     line-height: 27px;
     letter-spacing: 0.025em;
 }
-
-.qr__wrapper{
+@media (max-width: 600px) {
+    .main__title{
+       padding: 0 24px;
+       font-weight: 600;
+       font-size: 20px;
+       line-height: 24px;
+   }
+   .main__list{
+       padding: 0 24px;
+      li{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+      }
+   }
+}
+.qr__wrapper {
     display: flex;
     align-items: center;
     margin-top: 124px;
 }
-.qr__img{
+
+@media (max-width: 600px) {
+    .qr__wrapper{
+        display: none;
+    }
+}
+.qr__img {
     width: 142px;
     height: 142px;
 }
-.qr__info{
+
+.qr__info {
     max-width: 254px;
     font-weight: 400;
-font-size: 16px;
-line-height: 19px;
-letter-spacing: 0.025em;
-color: rgba(69, 69, 69, 0.75);
-margin-left: 25px;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.025em;
+    color: rgba(69, 69, 69, 0.75);
+    margin-left: 25px;
 }
 
+@media (max-width:600px) {
+    .main__inner {
+        flex-wrap: wrap;
+    }
+}
