--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,7 @@ body {
 
 @media (max-width: 500px) {
   .lang__wrapper {
+    margin: 0 24px;
     margin-top: 37px;
     padding: 17px;
     background: rgba(4, 123, 239, 0.07);
