pullin g for home

--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -128,7 +128,10 @@
       border-radius: 50%;
       background-color: #047BEF !important;
       color: white !important;
+
      &::after{
+
+      font-weight: bold !important;
       font-size: 25px;
      }
     }
@@ -152,7 +155,7 @@
     transform: scale(1)  translateY(0px)  !important ;
   }
   .swiper-slide-next ~ .swiper-slide{
-    transform: translateX(0px) !important;
+    transform: translateX(160px) !important;
   }
   .swiper-pagination{
   width: 150px !important;
@@ -161,4 +164,12 @@
   bottom: 0px !important;
   transform: translate(-75px);
   }
+  
+  .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+    font-weight: bold;
+    font-size: 25px;
+    padding: 10px;
+  }
 }
+
+
