--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,7 @@ body {
     color: white !important;
   }
   .main__slider .swiper-button-next::after, .main__slider .swiper-button-prev::after {
+    font-weight: bold !important;
     font-size: 25px;
   }
   .main__slider .swiper-button-next::after {
@@ -329,7 +330,7 @@ body {
     transform: scale(1) translateY(0px) !important;
   }
   .swiper-slide-next ~ .swiper-slide {
-    transform: translateX(0px) !important;
+    transform: translateX(160px) !important;
   }
   .swiper-pagination {
     width: 150px !important;
@@ -337,6 +338,11 @@ body {
     left: 50% !important;
     bottom: 0px !important;
     transform: translate(-75px);
+  }
+  .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+    font-weight: bold;
+    font-size: 25px;
+    padding: 10px;
   }
 }
 .lang__select__wrapper {
