--- a/css/main.css
+++ b/css/main.css
@@ -287,11 +287,12 @@ body {
   background-color: #fff !important;
 }
 .swiper-pagination .swiper-pagination-bullet-active {
-  transform: scale(1.2);
+  transform: scale(1.3);
+  opacity: 1 !important;
 }
 .swiper-pagination .swiper-pagination-bullet {
   background-color: #fff;
-  opacity: 1;
+  opacity: 0.7;
 }
 
 @media (max-width: 600px) {
@@ -310,16 +311,16 @@ body {
     color: white !important;
   }
   .main__slider .swiper-button-next::after, .main__slider .swiper-button-prev::after {
-    font-size: 25px;
+    font-size: 20px;
   }
   .main__slider .swiper-button-next::after {
-    margin-left: 0px;
+    margin-left: 4px;
   }
   .main__slider .swiper-button-prev {
     left: 0px;
   }
   .main__slider .swiper-button-prev::after {
-    margin-right: 0px;
+    margin-right: 4px;
   }
   .swiper-slide-active {
     transform: translateX(0px) !important;
