--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -94,11 +94,12 @@
     background-color: #fff !important;
   }
   .swiper-pagination-bullet-active{
-    transform: scale(1.2);
+    transform: scale(1.3);
+    opacity: 1 !important;
   }
   .swiper-pagination-bullet{
     background-color: #fff;
-    opacity: 1;
+    opacity: 0.7;
 
   }
   display: block;
@@ -129,18 +130,18 @@
       background-color: #047BEF !important;
       color: white !important;
      &::after{
-      font-size: 25px;
+      font-size: 20px;
      }
     }
     .swiper-button-next {
       &::after{
-       margin-left: 0px;
+       margin-left: 4px;
       }
      }
      .swiper-button-prev {
        left: 0px;
        &::after{
-        margin-right: 0px;
+        margin-right: 4px;
        }
       }
   }
