--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,8 @@ body {
 @media (max-width: 600px) {
   body {
     background-image: url("../../img/main__bg2.png");
-    background-position: left center;
-    background-size: contain;
+    background-position: left -50px top 380px;
+    background-size: 428px;
   }
 }
 .main__inner {
@@ -188,7 +188,7 @@ body {
 }
 @media (min-width: 600px) {
   .main__slider .swiper-button-next, .main__slider .swiper-button-prev {
-    top: 400px;
+    top: 480px;
   }
 }
 .main__slider {
@@ -249,10 +249,7 @@ body {
 .swiper-slide-next {
   z-index: 3;
   width: 250px !important;
-  transform: scale(1.1) translateY(-75px) !important;
-}
-.swiper-slide-next img {
-  height: 100%;
+  transform: scale(1.1) !important;
 }
 
 .swiper-slide-next ~ .swiper-slide {
@@ -269,13 +266,20 @@ body {
 }
 
 .swiper-slide img {
-  display: block;
+  display: flex;
+  align-items: flex-end !important;
+  justify-content: end;
   width: 100%;
-  height: 80%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
+@media (max-width: 600px) {
+  .swiper-slide img {
+    width: auto;
+    height: 80%;
+  }
+}
 .swiper-pagination {
   display: block;
   margin: 0 auto;
@@ -285,7 +289,7 @@ body {
   border-radius: 8px;
   padding: 11px;
   left: 55% !important;
-  bottom: 90px !important;
+  bottom: 10px !important;
   transform: translate(-75px);
 }
 .swiper-pagination span {
@@ -350,7 +354,7 @@ body {
     transform: scale(1) translateY(0px) !important;
   }
   .swiper-slide-next ~ .swiper-slide {
-    transform: translateX(160px) !important;
+    transform: translateX(143px) !important;
   }
   .swiper-pagination {
     width: 150px !important;
