--- a/scss/block/_main.scss
+++ b/scss/block/_main.scss
@@ -10,8 +10,8 @@ body {
 @media (max-width: 600px) {
     body{
         background-image: url('../../img/main__bg2.png');
-        background-position:  left  center;
-        background-size: contain;
+        background-position:  left -50px  top 380px;
+        background-size: 428px;
     }
 }
 .main__inner {
