--- a/scss/block/_select.scss
+++ b/scss/block/_select.scss
@@ -1,6 +1,19 @@
 
 .lang__select__wrapper{
     display: none;
+    position: relative;
+}
+.lang__select__wrapper::after{
+    position: absolute;
+    right: 0;
+    content: '';
+    width: 12px;
+    height: 8px;
+    display: flex;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('../../img/down.svg');
+
 }
 
 @media (max-width: 500px) {
@@ -10,6 +23,7 @@
         align-items: center;
         justify-content: space-around;
         select{
+            -webkit-appearance: none;
             border: none;
             background-color: transparent;
             font-weight: 600;
