--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body {
 @media (max-width: 600px) {
   body {
     background-image: url("../../img/main__bg2.png");
-    background-position: left -50px top 380px;
+    background-position: left -70px top 380px;
     background-size: 428px;
   }
 }
@@ -200,21 +200,21 @@ body {
     height: 580px;
     width: 100%;
   }
-  .swiper-slide img {
+  .main__slider .swiper-slide img {
     display: block;
     width: 100%;
-    height: 100% !important;
-    -o-object-fit: cover;
-       object-fit: cover;
+    height: 85% !important;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   .swiper-button-next, .swiper-button-prev {
     top: 400px !important;
   }
   .swiper-button-next {
-    right: 60px;
+    right: 32px;
   }
   .swiper-button-prev {
-    left: 60px;
+    left: 32px;
   }
 }
 .swiper {
