--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -12,22 +12,23 @@
   .main__slider{
     height: 580px;
     width: 100%;
-  }
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100% !important;
-    object-fit: cover;
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 85% !important;
+      object-fit: contain;
+    }
   }
   .swiper-button-next, .swiper-button-prev {
     top: 400px !important;
   }
   .swiper-button-next{
-    right: 60px;
+    right: 32px;
   }
   .swiper-button-prev{
-    left: 60px;
+    left: 32px;
   }
+
 }
 .swiper {
   width: 100%;
