--- a/css/main.css
+++ b/css/main.css
@@ -187,8 +187,8 @@ body {
   }
 }
 .main__slider {
-  height: 400px;
-  width: 50%;
+  height: 600px;
+  width: 60%;
 }
 .main__slider img {
   height: 100% !important;
@@ -197,13 +197,14 @@ body {
 
 @media (max-width: 600px) {
   .main__slider {
+    margin-top: 40px;
     height: 580px;
     width: 100%;
   }
   .main__slider .swiper-slide img {
     display: block;
     width: 100%;
-    height: 85% !important;
+    height: 100% !important;
     -o-object-fit: contain;
        object-fit: contain;
   }
@@ -211,10 +212,10 @@ body {
     top: 400px !important;
   }
   .swiper-button-next {
-    right: 32px;
+    right: 8px;
   }
   .swiper-button-prev {
-    left: 32px;
+    left: 8px;
   }
 }
 .swiper {
@@ -234,8 +235,6 @@ body {
   display: block;
   width: 100%;
   height: 70% !important;
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .swiper {
@@ -273,7 +272,7 @@ body {
 }
 
 .swiper-button-next, .swiper-button-prev {
-  top: 300px;
+  top: 450px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
