--- a/scss/block/_swiper.scss
+++ b/scss/block/_swiper.scss
@@ -1,8 +1,8 @@
 
 
 .main__slider{
-  height: 400px;
-  width: 50%;
+  height: 600px;
+  width: 60%;
   img{
     height: 100% !important;
     width: 100%;
@@ -10,12 +10,13 @@
 }
 @media (max-width:600px) {
   .main__slider{
+    margin-top: 40px;
     height: 580px;
     width: 100%;
     .swiper-slide img {
       display: block;
       width: 100%;
-      height: 85% !important;
+      height: 100% !important;
       object-fit: contain;
     }
   }
@@ -23,12 +24,11 @@
     top: 400px !important;
   }
   .swiper-button-next{
-    right: 32px;
+    right: 8px;
   }
   .swiper-button-prev{
-    left: 32px;
+    left: 8px;
   }
-
 }
 .swiper {
   width: 100%;
@@ -47,7 +47,6 @@
   display: block;
   width: 100%;
   height: 70% !important;
-  object-fit: contain;
 }
 
 .swiper {
@@ -85,7 +84,7 @@
   }
   
     .swiper-button-next, .swiper-button-prev {
-      top: 300px;
+      top: 450px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
